# web-python-fullstack

.github/workflows/: dev.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 149145527d07_.py  2d7746088e4d_.py
backend/app/: __init__.py  api.py  config.py  database.py  main.py  utils.py
backend/app/api/: __init__.py
backend/app/api/routes/: items.py
backend/app/api/v1/: dependencies.py
backend/app/api/v1/routes/: __init__.py  auth.py  item.py  user.py
backend/app/core/: database.py  exceptions.py  security.py
backend/app/core/mixins/: __init__.py  time_stamp_mixin.py  uuid_mixin.py
backend/app/models/: __init__.py  item.py  user.py  uuid_mixin.py
backend/app/models/mixins/: __init__.py  timestamp_mixin.py  uuid_mixin.py
backend/app/repositories/: __init__.py  item.py  user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/services/: __init__.py  auth.py  item.py  user.py
backend/app/user/: dependencies.py  exceptions.py  model.py  repository.py  routes.py  schemas.py  service.py
frontend/: .gitignore  main.py  package.json  pyproject.toml  tailwind.config.js
frontend/src/: app.js  index.html
frontend/src/chunks/: home.html  users.html
frontend/src/layouts/: base.html
frontend/src/pages/: home.html  index.html  login.html  table_item.html
frontend/src/partials/: extended-sidebar.html  sidebar.html  top-navbar.html
frontend/src/static/css/: input.css
frontend/src/static/js/: auth.js  base.js  content-loader.js  main.js  sidebar.js
frontend/src/templates/: base.html
